feat: [phase 5] implement vote api functionality
